# starling

./: CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
docs/: libstarling.md  starling2csv.md
docs/ru/: starling2csv.md
include/: starling.h
libstarling/: CMakeLists.txt
libstarling/include/: starling.h
libstarling/src/: decode.c  dissect.c  inf.c  sanitize.c  tabulate.c
locale/: ru.mo  ru.po
src/: decode.c  dissect.c  sanitize.c  starling2csv.c  tabulate.c
